# RCS

./: CMakeLists.txt
include/: ACA.hpp  AIFMM.hpp  AIFMMBox.hpp  AIFMMTree.hpp  AIFMMTree2D_3D.hpp  AIFMMTree2D_3D_memory_optimized.hpp  EFIEMatrix.hpp  ElectrostaticsMatrix.hpp  Patch.hpp  basicKernel.hpp  includes.hpp  kernel.hpp  rrqr.hpp
inputFiles/radius015/: nodeList78.txt  patchList78.txt
src/: ACA.cpp  AIFMM.cpp  AIFMMBox.cpp  EFIEMatrix.cpp  ElectrostaticsMatrix.cpp  Patch.cpp  basicKernel.cpp  includes.cpp  kernel.cpp  rrqr.cpp
test/: sphere.cpp
